--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- makes website low full size on mobile devices-->
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
         <style>
