--- a/lab10/index.html
+++ b/lab10/index.html
@@ -12,6 +12,9 @@
             .clear {
                 clear: both;
             }
+            .indeximage {
+                max-width: 100%;
+            }
         </style>
     </head>
     <body>
@@ -22,7 +25,7 @@
             <a href="contact.html">Contact</a> |
         </nav>
     <h1>Yui Inagawa's Biography</h1>
-    <header><img src="../images/myoriginalimage.jpg" alt="my photo"></header>
+    <header><img class="indeximage" src="../images/myoriginalimage.jpg" alt="my photo"></header>
    <main>
     <p>
         My name is Yui Inagawa and I am a sophomore at Syracuse University. I am a dual major in Newhouse studying television, radio, and film and the iSchool studying informational technology. I have a <strong>passion</strong> for video editing and doing a lot of “behind the scenes” work for films that are produced. During my freshman year, I produced a documentary for Syracuse NEWS-house where they published my film and wrote an article about it. 
