--- a/lab10/index.html
+++ b/lab10/index.html
@@ -20,9 +20,9 @@
     <body>
         <nav
             class= "navselector">
-            <a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
-            <a href="contact.html">Contact</a> |
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
+            <a href="contact.html">Contact</a> <span>|</span>
         </nav>
     <h1>Yui Inagawa's Biography</h1>
     <header><img class="indeximage" src="../images/myoriginalimage.jpg" alt="my photo"></header>
