--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -30,6 +30,7 @@
                 border-radius: 1em;
                 background-color:hotpink;
                 margin: 10px;
+                flex-wrap: wrap;
             }
             .form {
                 padding: 20px;
@@ -41,6 +42,7 @@
                 margin-top: 50px;
                 margin-bottom: 50px;
                 margin-left: 50px;
+                margin-right: 1em;
             }
             .form {
                 flex: 1;
@@ -51,9 +53,9 @@
     <body>
         <nav
             class= "navselector">
-            <a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
-            <a href="contact.html">Contact</a> |
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
+            <a href="contact.html">Contact</a> <span>|</span>
         </nav>
         <h1>Contact</h1>
 <div class="top">
@@ -77,7 +79,7 @@
 <div class="clear"></div>
 <div class="bottom">
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.0480928648317!2d-76.1245304845227!3d43.01937487914818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f482afc05999%3A0x2ceef35689627af1!2s101%20Farm%20Acre%20Rd%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1631802820635!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.0480928648317!2d-76.1245304845227!3d43.01937487914818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f482afc05999%3A0x2ceef35689627af1!2s101%20Farm%20Acre%20Rd%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1631802820635!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <br><br>
     <div class="form">  
