--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -52,9 +52,9 @@
     <body>
         <nav
             class= "navselector">
-            <a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
-            <a href="contact.html">Contact</a> |
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
+            <a href="contact.html">Contact</a> <span>|</span>
         </nav>
         <h1>Technical Skills</h1>
         <div class="flex2">
