--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -90,6 +90,7 @@
     <br>
     <hr>
     <br>
+    <footer>
     &copy; 2021 Yui - All Rights Reserved
     <br>
     <strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong>
@@ -116,5 +117,6 @@
             <img src="images/web.png" width="20" height="20"alt="my photo">
         </a>
         </nav>
+    </footer>
 </body>
 </html>
