--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -106,6 +106,7 @@
     <br>
     <hr>
     <br>
+    <footer>
     &copy; 2021 Yui - All Rights Reserved
     <br>
     <strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong>
@@ -131,6 +132,7 @@
         <a href="https://quinnxcii.com">
             <img src="images/web.png" width="20" height="20"alt="my photo">
         </a>
-        </nav>
+    </nav>
+    </footer>
 </body>
 </html>
