--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -9,10 +9,10 @@
 <body>
     <img src="images/logo.png" width="100" height="100" alt="my photo">
     <nav class= "navselector">
-        <a href="skeletonhome.html">Home</a>
-        <a href="skeletonabout.html">About</a>
-        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-        <a href="skeletonmore.html">More Like This</a>
+        <a href="skeletonhome.html">Home</a> |
+        <a href="skeletonabout.html">About</a> |
+        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a> |
+        <a href="skeletonmore.html">More Like This</a> |
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
@@ -31,7 +31,9 @@
             <img src="images/web.png" width="20" height="20"alt="my photo">
         </a>
         </nav>
-    <img src="images/more1.png" width="900" height="400" alt="my photo">
+        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
+            <img src="images/more1.png" width="900" height="400" alt="my photo">
+        </a>
     <h1>Interested in more music like Quinn XCII?</h1>
     <h2>Check out the artists below!</h2>
     <br>
@@ -40,24 +42,33 @@
         Top 3 song recommendations: “Not Okay”, “The Reason”, “Sad Tonight”<br>
         Connection to Quinn XCII: Chelsea Cutler and Quinn XCII do many collaborations together such as “Flare Guns”, “Little Things”, “Stay Next to Me”
     </p>
-    <iframe src="https://youtu.be/EMmxVLi3dxg"></iframe>
-    <iframe src="https://youtu.be/EYTUV32Gi0o"></iframe>
+    <a href="https://youtu.be/EMmxVLi3dxg">
+        <img src="images/flare.png" width="700" height="300" alt="my photo">
+    </a>
+    <a href="https://youtu.be/EYTUV32Gi0o">
+        <img src="images/stay.png" width="700" height="300" alt="my photo">
+    </a>
     <hr>
     <h2><strong>Ayokay</strong></h2>
     <p>Ayokay: 29 year-old American producer and DJ<br>
         Top 3 song recommendations: “Kings of Summer”, “Stay with me”, “Queen”<br>
         Connection to Quinn XCII: Ayokay is Quinn XCII’s highschool friend who eventually became his primary producer
     </p>
-    <iframe src="https://youtu.be/5dS-n8qZjPk"></iframe>
+    <a href="https://youtu.be/5dS-n8qZjPk">
+        <img src="images/kings.png" width="700" height="300" alt="my photo">
+    </a>
     <hr>
     <h2><strong>Jeremy Zucker</strong></h2>
     <p>Jeremy Zucker: 25 year-old American singer-songwriter<br>
         Top 3 song recommendations: “All the Kids are Depressed”, “Comethru”, “Talk is Overrated”<br>
         Connection to Quinn XCII: Jeremy has a song with Quinn XCII called “Doris Terrace” and he has a couple songs with Chelsea Cutler such as, “You Were Good to Me” and “Please”
     </p>
-    <iframe src="https://youtu.be/LcJxiMCV2qc"></iframe>
+    <a href="https://youtu.be/LcJxiMCV2qc">
+        <img src="images/dorris.png" width="700" height="300" alt="my photo">
+    </a>
     <hr>
     <br>
+    <footer>
     &copy; 2021 Yui - All Rights Reserved
     <br>
     <strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong>
@@ -84,5 +95,6 @@
             <img src="images/web.png" width="20" height="20"alt="my photo">
         </a>
         </nav>
+    </footer>
 </body>
 </html>
