--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -100,7 +100,7 @@
             <label for="flname">First and Last Name:</label>
             <input type="text" id="flname" name="fullname">
 
-            <p>Why are you filling out this form?</p>
+            <legend>Why are you filling out this form?</legend>
             <fieldset>
             <input type="radio" id="option1" name="question" value="need to schedule a meeting">
             <label for="option1">need to schedule a meeting</label>
