--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -17,7 +17,7 @@
                 margin-right: 5em;
             }
             .sidebar {
-                background-color: rgb(60, 60, 196);
+                background-color: lightblue;
                 border-radius: 1em;
                 padding: 30px;
                 padding-right: 5em;
