--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -7,7 +7,7 @@
     <title>About</title>
 </head>
 <body>
-    <img src="images/logo.png" width="100" height="100" alt="my photo">
+    <img src="images/logo.png" width="100" alt="my photo">
     <nav class= "navselector">
         <a href="skeletonhome.html">Home</a>
         <a href="skeletonabout.html">About</a>
@@ -16,33 +16,33 @@
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" height="20" alt="my photo">
+            <img src="images/facebook.png" width="20" alt="my photo">
         </a>
         <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" height="20" alt="my photo">
+            <img src="images/instagram.png" width="20" alt="my photo">
         </a>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" height="20" alt="my photo">
+            <img src="images/spotify.png" width="20" alt="my photo">
         </a>
         <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" height="20" alt="my photo">
+            <img src="images/twitter.png" width="20" alt="my photo">
         </a>
         <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" height="20" alt="my photo">
+            <img src="images/web.png" width="20" alt="my photo">
         </a>
         </nav>
-    <img src="images/about1.jpg" width="900" height="400" alt="my photo">
+    <img src="images/about1.jpg" width="900" alt="my photo">
     <h1>Biography</h1>
     <p>Quinn XCII is a 29 year-old American singer-songwriter from Detroit, Michigan. His birth name is Michael Temoroski, but his fans know him by his stage name; Quinn XCII. Quinn XCII is an acronym for “Quit Unless your Instincts are Never Neglected” followed by his birth year, ‘92. Quinn adopted this quote from one of his professors at Michigan State University, where he attended college. Sophomore year of college is when Quinn began to pursue his interest in music by singing/writing his own songs and uploading them to YouTube. At this early stage in his career, he went by “Mike T” before he came up with Quinn XCII. </p>
-    <img src="images/about2.jpg" width="300" height="300" alt="my photo">
+    <img src="images/about2.jpg" width="300" alt="my photo">
     <hr>
     <h1>Photos</h1>
-    <img src="images/about3.jpg" width="400" height="400" alt="my photo">
-    <img src="images/about4.jpg" width="400" height="400" alt="my photo">
-    <img src="images/about5.jpg" width="400" height="400" alt="my photo">
-    <img src="images/about6.jpg" width="400" height="400" alt="my photo">
-    <img src="images/about7.jpg" width="400" height="400" alt="my photo">
-    <img src="images/about8.jpg" width="400" height="400" alt="my photo">
+    <img src="images/about3.jpg" width="400" alt="my photo">
+    <img src="images/about4.jpg" width="400" alt="my photo">
+    <img src="images/about5.jpg" width="400" alt="my photo">
+    <img src="images/about6.jpg" width="400" alt="my photo">
+    <img src="images/about7.jpg" width="400" alt="my photo">
+    <img src="images/about8.jpg" width="400" alt="my photo">
     <hr>
     <h1>Career Timeline</h1>
     <strong>August, 2011-</strong>
@@ -118,19 +118,19 @@
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" height="20" alt="my photo">
+            <img src="images/facebook.png" width="20" alt="my photo">
         </a>
         <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" height="20" alt="my photo">
+            <img src="images/instagram.png" width="20" alt="my photo">
         </a>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" height="20" alt="my photo">
+            <img src="images/spotify.png" width="20" alt="my photo">
         </a>
         <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" height="20" alt="my photo">
+            <img src="images/twitter.png" width="20" alt="my photo">
         </a>
         <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" height="20" alt="my photo">
+            <img src="images/web.png" width="20" alt="my photo">
         </a>
     </nav>
     </footer>
