--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -7,7 +7,7 @@
     <title>More Like This</title>
 </head>
 <body>
-    <img src="images/logo.png" width="100" height="100" alt="my photo">
+    <img src="images/logo.png" width="100" alt="my photo">
     <nav class= "navselector">
         <a href="skeletonhome.html">Home</a> |
         <a href="skeletonabout.html">About</a> |
@@ -16,23 +16,23 @@
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" height="20" alt="my photo">
+            <img src="images/facebook.png" width="20" alt="my photo">
         </a>
         <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" height="20" alt="my photo">
+            <img src="images/instagram.png" width="20" alt="my photo">
         </a>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" height="20" alt="my photo">
+            <img src="images/spotify.png" width="20" alt="my photo">
         </a>
         <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" height="20" alt="my photo">
+            <img src="images/twitter.png" width="20" alt="my photo">
         </a>
         <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" height="20" alt="my photo">
+            <img src="images/web.png" width="20" alt="my photo">
         </a>
         </nav>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/more1.png" width="900" height="400" alt="my photo">
+            <img src="images/more1.png" width="900" alt="my photo">
         </a>
     <h1>Interested in more music like Quinn XCII?</h1>
     <h2>Check out the artists below!</h2>
@@ -43,10 +43,10 @@
         Connection to Quinn XCII: Chelsea Cutler and Quinn XCII do many collaborations together such as “Flare Guns”, “Little Things”, “Stay Next to Me”
     </p>
     <a href="https://youtu.be/EMmxVLi3dxg">
-        <img src="images/flare.png" width="700" height="300" alt="my photo">
+        <img src="images/flare.png" width="700" alt="my photo">
     </a>
     <a href="https://youtu.be/EYTUV32Gi0o">
-        <img src="images/stay.png" width="700" height="300" alt="my photo">
+        <img src="images/stay.png" width="700" alt="my photo">
     </a>
     <hr>
     <h2><strong>Ayokay</strong></h2>
@@ -55,7 +55,7 @@
         Connection to Quinn XCII: Ayokay is Quinn XCII’s highschool friend who eventually became his primary producer
     </p>
     <a href="https://youtu.be/5dS-n8qZjPk">
-        <img src="images/kings.png" width="700" height="300" alt="my photo">
+        <img src="images/kings.png" width="700" alt="my photo">
     </a>
     <hr>
     <h2><strong>Jeremy Zucker</strong></h2>
@@ -64,7 +64,7 @@
         Connection to Quinn XCII: Jeremy has a song with Quinn XCII called “Doris Terrace” and he has a couple songs with Chelsea Cutler such as, “You Were Good to Me” and “Please”
     </p>
     <a href="https://youtu.be/LcJxiMCV2qc">
-        <img src="images/dorris.png" width="700" height="300" alt="my photo">
+        <img src="images/dorris.png" width="700" alt="my photo">
     </a>
     <hr>
     <br>
@@ -80,19 +80,19 @@
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" height="20" alt="my photo">
+            <img src="images/facebook.png" width="20" alt="my photo">
         </a>
         <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" height="20" alt="my photo">
+            <img src="images/instagram.png" width="20" alt="my photo">
         </a>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" height="20" alt="my photo">
+            <img src="images/spotify.png" width="20" alt="my photo">
         </a>
         <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" height="20" alt="my photo">
+            <img src="images/twitter.png" width="20" alt="my photo">
         </a>
         <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" height="20" alt="my photo">
+            <img src="images/web.png" width="20" alt="my photo">
         </a>
         </nav>
     </footer>
