--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -5,88 +5,188 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        body {
+            background-color: rgb(211, 252, 204);
+        }
+        div {
+            display: flex;
+        }
+        .top {
+            justify-content: space-between;
+        }
+        .logo {
+            padding: .7em;
+        }
+        nav {
+            justify-content: flex-end;
+            text-align: right;
+            margin-right: 1em;
+            margin-bottom: .3em;
+        }
+        h1 {
+            font-size: 3.5em;
+            text-align: center;
+            color: rgb(16, 66, 47)
+        }
+        h2 {
+            font-size: 2em;
+            text-align: center;
+        }
+        .intropic {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            padding-bottom: 5em;
+        }
+        .nav {
+            margin: 1em;
+        }
+        p {
+            padding-left: 5em;
+            padding-right: 5em;
+            padding-bottom: 5em;
+            font-size: 1.5em;
+        }
+        caption {
+            font-size: 1.5em;
+            background-color: rgb(132, 196, 233);
+            padding: .3em;
+        }
+        table {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .wholetable {
+            margin-left: 1em;
+        }
+        td {
+            padding: 1em;
+            padding-inline-end: 7em;
+            font-size: 1.5em;
+        }
+        .images {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-content: space-between;
+        }
+        .imagestogether {
+            margin-top: 10em;
+        }
+        .ticket {
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-size: 1.5em;
+        }
+        a:link {
+            color: #ffffff;
+        }
+        a:visited {
+            color: #000000;
+        }     
+        a:hover {
+            color:#0004ff;
+        }      
+        .both {
+            margin-left: 5em;
+        }
+        .imageblue {
+            margin-bottom: 5em;
+        }
+    </style>
 </head>
 <body>
-    <img src="images/logo.png" width="100" height="100" alt="my photo">
-    <nav class= "navselector">
-        <a href="skeletonhome.html">Home</a>
-        <a href="skeletonabout.html">About</a>
-        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-        <a href="skeletonmore.html">More Like This</a>
-    </nav>
-    <nav>
-    <a href="https://www.facebook.com/quinnxcii">
-        <img src="images/facebook.png" width="20" height="20" alt="my photo">
-    </a>
-    <a href="https://www.instagram.com/quinnxcii/">
-        <img src="images/instagram.png" width="20" height="20" alt="my photo">
-    </a>
-    <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-        <img src="images/spotify.png" width="20" height="20" alt="my photo">
-    </a>
-    <a href="https://twitter.com/QuinnXCII?s=20">
-        <img src="images/twitter.png" width="20" height="20" alt="my photo">
-    </a>
-    <a href="https://quinnxcii.com">
-        <img src="images/web.png" width="20" height="20" alt="my photo">
-    </a>
-    </nav>
+    <div class="top">
+        <div>
+            <div class="mylogo">
+                <div><img src="images/logo.png" width="100" alt="my photo"></div>
+            </div>
+        </div>
+        <div class="socials">
+            <div>
+                <div class="logo"><a href="https://www.facebook.com/quinnxcii"><img src="images/facebook.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://www.instagram.com/quinnxcii/"><img src="images/instagram.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ"><img src="images/spotify.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://twitter.com/QuinnXCII?s=20"><img src="images/twitter.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://quinnxcii.com"><img src="images/web.png" width="20" alt="my photo"></a></div>
+            </div>
+        </div>
+    </div>
     <h1>Welcome to Quinn XCII's Fan Page!</h1>
-    <img src="images/home3.jpg" width="900" height="400" alt="my photo">
-    <h1>About the Site</h1>
+    <nav>
+        <a class="nav" href="skeletonhome.html">Home</a>
+        <a class="nav" href="skeletonabout.html">About</a>
+        <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+        <a class="nav" href="skeletonmore.html">More Like This</a>
+    </nav>
+<section>
+    <img class="intropic" src="images/home3.jpg" width="1400" height="500" alt="my photo">
+    <h2>About the Site</h2>
     <p>Welcome to my website dedicated to an American singer-songwriter known as Quinn XCII. If you are a fan of his music, this is the perfect webpage for you! This site allows you to discover everything there is to know about Quinn XCII including his personal biography, merchandise, tours, life accomplishments, song recommendations, and more.</p>
     <hr>
-    <h1>Tour Dates</h1>
-    <table>
-        <caption>Get your tickets now!</caption>
-        <tr>
-            <td>AUG 31</td>
-            <td>Berkeley, CA | The Greek Theater</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 02</td>
-            <td>Salt Lake City, UT | The Complex</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 05</td>
-            <td>St. Louis, MO | St. Louis Music Park</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 07</td>
-            <td>Minneapolis, MN | The Armour</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 10</td>
-            <td>Rochester Hills, MI | Medow Brook</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 11</td>
-            <td>Chicago, IL | Huntington Pavilion</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 12</td>
-            <td>Indianapolis, IN | TCU Amphitheater</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 14</td>
-            <td>Cleveland, OH | Jacobs Pavilion</td>
-            <td>TICKETS</td>
-        </tr>
-        <tr>
-            <td>SEP 16</td>
-            <td>Philidelphia, PA | Skyline Stage</td>
-            <td>TICKETS</td>
-        </tr>
-    </table>
-    <img src="images/home1.jpg" width="300" height="300" alt="my photo">
-    <img src="images/home2.jpg" width="400" height="300" alt="my photo">
+</section>
+    <h2>Tour Dates</h2>
+    <div class="both">
+        <div>
+            <div class="wholetable">
+                <table>
+                    <caption>Get your tickets now!</caption>
+                    <tr>
+                        <td>AUG 31</td>
+                        <td>Berkeley, CA | The Greek Theater</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 02</td>
+                        <td>Salt Lake City, UT | The Complex</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 05</td>
+                        <td>St. Louis, MO | St. Louis Music Park</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 07</td>
+                        <td>Minneapolis, MN | The Armour</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 10</td>
+                        <td>Rochester Hills, MI | Medow Brook</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 11</td>
+                        <td>Chicago, IL | Huntington Pavilion</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 12</td>
+                        <td>Indianapolis, IN | TCU Amphitheater</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 14</td>
+                        <td>Cleveland, OH | Jacobs Pavilion</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                    <tr>
+                        <td>SEP 16</td>
+                        <td>Philidelphia, PA | Skyline Stage</td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="imagestogether">
+            <div class="images">
+                <img class="imageblue" src="images/home1.jpg" width="300" alt="my photo">
+                <img src="images/home2.jpg" width="400" alt="my photo">
+            </div>
+        </div>
+    </div>
+
     <br>
     <hr>
     <br>
@@ -102,19 +202,19 @@
     </nav>
     <nav>
         <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" height="20" alt="my photo">
+            <img src="images/facebook.png" width="20" alt="my photo">
         </a>
         <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" height="20" alt="my photo">
+            <img src="images/instagram.png" width="20" alt="my photo">
         </a>
         <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" height="20" alt="my photo">
+            <img src="images/spotify.png" width="20" alt="my photo">
         </a>
         <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" height="20" alt="my photo">
+            <img src="images/twitter.png" width="20" alt="my photo">
         </a>
         <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" height="20" alt="my photo">
+            <img src="images/web.png" width="20" alt="my photo">
         </a>
         </nav>
     </footer>
