--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -73,6 +73,7 @@
         }
         .imagestogether {
             margin-top: 10em;
+            margin-right: 3em;
         }
         .ticket {
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -91,7 +92,14 @@
             margin-left: 5em;
         }
         .imageblue {
-            margin-bottom: 5em;
+            margin-bottom: 7em;
+        }
+        .navselector {
+            justify-content: flex-end;
+            text-align: right;
+        }
+        .topfooter, .bottomfooter {
+            justify-content: space-between;
         }
     </style>
 </head>
@@ -120,7 +128,7 @@
         <a class="nav" href="skeletonmore.html">More Like This</a>
     </nav>
 <section>
-    <img class="intropic" src="images/home3.jpg" width="1400" height="500" alt="my photo">
+    <img class="intropic" src="images/home3new.jpg" width= "1355" alt="my photo">
     <h2>About the Site</h2>
     <p>Welcome to my website dedicated to an American singer-songwriter known as Quinn XCII. If you are a fan of his music, this is the perfect webpage for you! This site allows you to discover everything there is to know about Quinn XCII including his personal biography, merchandise, tours, life accomplishments, song recommendations, and more.</p>
     <hr>
@@ -182,7 +190,7 @@
         <div class="imagestogether">
             <div class="images">
                 <img class="imageblue" src="images/home1.jpg" width="300" alt="my photo">
-                <img src="images/home2.jpg" width="400" alt="my photo">
+                <img src="images/home2.jpg" width="300" alt="my photo">
             </div>
         </div>
     </div>
@@ -191,32 +199,43 @@
     <hr>
     <br>
     <footer>
-    &copy; 2021 Yui - All Rights Reserved
-    <br>
-    <strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong>
-    <nav class= "navselector">
-        <a href="skeletonhome.html">Home</a>
-        <a href="skeletonabout.html">About</a>
-        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-        <a href="skeletonmore.html">More Like This</a>
-    </nav>
-    <nav>
-        <a href="https://www.facebook.com/quinnxcii">
-            <img src="images/facebook.png" width="20" alt="my photo">
-        </a>
-        <a href="https://www.instagram.com/quinnxcii/">
-            <img src="images/instagram.png" width="20" alt="my photo">
-        </a>
-        <a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/spotify.png" width="20" alt="my photo">
-        </a>
-        <a href="https://twitter.com/QuinnXCII?s=20">
-            <img src="images/twitter.png" width="20" alt="my photo">
-        </a>
-        <a href="https://quinnxcii.com">
-            <img src="images/web.png" width="20" alt="my photo">
-        </a>
-        </nav>
+        <div class="topfooter">
+            <div>
+                <div>&copy; 2021 Yui - All Rights Reserved</div>
+            </div>
+            <div>
+                <div class= "navselector">
+                    <a class="nav" href="skeletonhome.html">Home</a>
+                    <a class="nav" href="skeletonabout.html">About</a>
+                    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+                    <a class="nav" href="skeletonmore.html">More Like This</a>
+                </div>
+            </div>
+        </div>
+        <div class="bottomfooter">
+            <div>
+            <div><strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong></div>
+            </div>
+            <div>
+                <div>
+                    <a class="logo" href="https://www.facebook.com/quinnxcii">
+                        <img src="images/facebook.png" width="20" alt="my photo">
+                    </a>
+                    <a class="logo" href="https://www.instagram.com/quinnxcii/">
+                        <img src="images/instagram.png" width="20" alt="my photo">
+                    </a>
+                    <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
+                        <img src="images/spotify.png" width="20" alt="my photo">
+                    </a>
+                    <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
+                        <img src="images/twitter.png" width="20" alt="my photo">
+                    </a>
+                    <a class="logo" href="https://quinnxcii.com">
+                        <img src="images/web.png" width="20" alt="my photo">
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
