--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -80,7 +80,7 @@
             font-size: 1.5em;
         }
         a:link {
-            color: #ffffff;
+            color: rgb(18, 61, 18);
         }
         a:visited {
             color: #000000;
